update libraries, get rid of compile warning